# velgit

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
docs/: backend-conventions.md  frontend-conventions.md  manual-test-checklist.md
docs/adr/: 0001-pdf-diff-pixel-overlay.md  0002-filename-as-drawing-identity.md  0003-centralized-samba-repository.md  0004-pdfium-render-for-pdf-rasterization.md  0005-storage-sqlite-plus-file-tree.md  0006-file-watching-notify-with-polling-fallback.md  0007-diff-algorithm-threshold-pixel-comparison.md  0008-rust-heavy-architecture.md  0009-tanstack-query-for-frontend-state.md  0010-diff-image-transfer-via-custom-protocol.md  0015-frontend-stack.md  (+18 more)
scripts/: setup-pdfium.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_commit_files.sql  0003_releases.sql  0004_release_drawings_cascade.sql  0005_image_cache.sql  0006_drawing_lineage.sql  001_initial.sql
src-tauri/src/: image_cache.rs  lib.rs  main.rs  png_encode_fast.rs
src-tauri/src/commands/: commits.rs  drawings.rs  images.rs  mod.rs  project.rs  releases.rs
src-tauri/src/db/: mod.rs
src-tauri/src/diff/: mod.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/releases/: mod.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/watcher/: mod.rs
(+57 files in other folders)
