[package]
name = "velgit"
version = "0.1.3"
description = "建築・設計事務所向け図面バージョン管理ツール"
authors = ["matsumok"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "velgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.21.0", features = ["vendored-libgit2"] }
sqlx = { version = "0.9.0", features = ["sqlite", "migrate", "runtime-tokio"] }
tokio = { version = "^1.44", features = ["full"] }
tauri-plugin-dialog = "2"
notify = "8"
pdfium-render = { version = "0.8", features = ["image", "pdfium_7543"] }
image = "0.25"
flate2 = "1"
crc32fast = "1"
base64 = "0.22"
rayon = "1"
zip = "2"

[dev-dependencies]
tempfile = "3"

